--- a/index.html
+++ b/index.html
@@ -3143,7 +3143,7 @@
     const SUPABASE_FUNCTIONS_URL = 'https://vqksytduqxpfcovijhko.functions.supabase.co';
     // Bump on every publish so we can sanity-check cache and whether we're on the latest build.
     // Format: vMAJOR.MINOR.PATCH+YYYYMMDD.N
-    const APP_VERSION = 'v0.7.31+20260209.1';
+    const APP_VERSION = 'v0.7.32+20260209.1';
     const LIKELIHOOD_THIS_Q = 'this_q';
     const LIKELIHOOD_NEXT_Q = 'next_q';
     const LIKELIHOOD_HELP = 'help_needed';
@@ -6582,8 +6582,9 @@
         valueEl.textContent = '-';
         return;
       }
+      // Default cycle-time analysis to "closed since 2025" (intro >= 2025-01) when available.
       if (!cycleIntroCutoffMonthState || !months.includes(cycleIntroCutoffMonthState)) {
-        cycleIntroCutoffMonthState = months[0];
+        cycleIntroCutoffMonthState = months.includes('2025-01') ? '2025-01' : months[0];
       }
       const idx = Math.max(0, months.indexOf(cycleIntroCutoffMonthState));
       slider.min = '0';
