--- a/index.html
+++ b/index.html
@@ -1137,12 +1137,88 @@
       background: #fff;
     }
 
-    .likelihood-grid {
-      margin-top: 8px;
-      display: grid;
-      gap: 10px;
-      grid-template-columns: repeat(3, minmax(250px, 1fr));
-    }
+	    .likelihood-grid {
+	      margin-top: 8px;
+	      display: grid;
+	      gap: 10px;
+	      grid-template-columns: repeat(3, minmax(250px, 1fr));
+	    }
+	
+	    .closure-filters {
+	      display: flex;
+	      align-items: center;
+	      justify-content: flex-end;
+	      gap: 10px;
+	      margin-top: 8px;
+	      flex-wrap: wrap;
+	    }
+	
+	    .ms {
+	      position: relative;
+	      border: 1px solid #dbe6fb;
+	      background: #ffffff;
+	      border-radius: 10px;
+	      padding: 6px 8px;
+	      box-shadow: 0 8px 20px rgba(10, 35, 80, 0.05);
+	    }
+	
+	    .ms summary {
+	      cursor: pointer;
+	      list-style: none;
+	      font-size: 12px;
+	      font-weight: 700;
+	      color: #274777;
+	      outline: none;
+	      user-select: none;
+	    }
+	
+	    .ms summary::-webkit-details-marker { display: none; }
+	
+	    .ms-panel {
+	      margin-top: 8px;
+	      padding-top: 8px;
+	      border-top: 1px solid #e6eefc;
+	      max-height: 220px;
+	      overflow: auto;
+	      min-width: 260px;
+	    }
+	
+	    .ms-row {
+	      display: flex;
+	      align-items: center;
+	      gap: 8px;
+	      padding: 5px 2px;
+	      font-size: 12px;
+	      color: #1e345a;
+	    }
+	
+	    .ms-row input { accent-color: #2f7efc; }
+	
+	    .closure-help-filter {
+	      display: flex;
+	      align-items: center;
+	      gap: 8px;
+	      border: 1px solid #dbe6fb;
+	      background: #ffffff;
+	      border-radius: 10px;
+	      padding: 6px 8px;
+	      box-shadow: 0 8px 20px rgba(10, 35, 80, 0.05);
+	    }
+	
+	    .closure-help-filter label {
+	      font-size: 12px;
+	      font-weight: 700;
+	      color: #274777;
+	    }
+	
+	    .closure-help-filter select {
+	      border: 1px solid #dbe6fb;
+	      border-radius: 8px;
+	      padding: 6px 8px;
+	      font-size: 12px;
+	      color: #1e345a;
+	      background: #ffffff;
+	    }
 
     .likelihood-table-card {
       border: 1px solid #e2eaf9;
@@ -3159,7 +3235,7 @@
     const SUPABASE_FUNCTIONS_URL = 'https://vqksytduqxpfcovijhko.functions.supabase.co';
     // Bump on every publish so we can sanity-check cache and whether we're on the latest build.
     // Format: vMAJOR.MINOR.PATCH+YYYYMMDD.N
-    const APP_VERSION = 'v0.7.34+20260209.1';
+    const APP_VERSION = 'v0.7.35+20260209.1';
     // Deal-level help flag. (We keep legacy likelihood constants around for
     // backwards compatibility when reading previously stored state.)
     const LIKELIHOOD_THIS_Q = 'this_q'; // legacy
@@ -3233,6 +3309,8 @@
     let scorecardSelectedSeller = 'Overall';
     let scorecardIntroMonthsState = [];
     let scorecardIntroCutoffMonthState = null;
+    let scorecardClosureStageFilter = null; // null = all; else Set of stage labels
+    let scorecardClosureHelpFilter = 'all'; // all | yes | no
     let cycleRowsState = [];
     let cycleScopeState = 'Overall';
     let cycleIntroMonthsState = [];
@@ -4069,12 +4147,70 @@
       thisDeals.sort((a, b) => String(a.deal || '').localeCompare(String(b.deal || '')));
       nextDeals.sort((a, b) => String(a.deal || '').localeCompare(String(b.deal || '')));
 
+      // Build stage filter options from the current closures universe.
+      const stageUniverse = new Set();
+      [...thisDeals, ...nextDeals].forEach((rec) => {
+        const st = String(rec.stage || '').trim() || '(blank)';
+        stageUniverse.add(st);
+      });
+      const stageOptions = Array.from(stageUniverse)
+        .sort((a, b) => (stageSortKey(a) - stageSortKey(b)) || a.localeCompare(b));
+      if (refs.closureStagePanelEl && refs.closureStageSummaryEl) {
+        refs.closureStagePanelEl.innerHTML = '';
+        stageOptions.forEach((st) => {
+          const row = document.createElement('label');
+          row.className = 'ms-row';
+          const cb = document.createElement('input');
+          cb.type = 'checkbox';
+          cb.value = st;
+          const activeSet = scorecardClosureStageFilter;
+          cb.checked = (!activeSet || activeSet.size === 0) ? true : activeSet.has(st);
+          cb.addEventListener('change', () => {
+            const next = new Set(scorecardClosureStageFilter || stageOptions);
+            if (cb.checked) next.add(st);
+            else next.delete(st);
+            // Normalize: if all selected, store null (means All) to keep state small.
+            if (next.size === stageOptions.length) scorecardClosureStageFilter = null;
+            else scorecardClosureStageFilter = next;
+            updateLikelihoodSummaryForSeller(seller);
+          });
+          const txt = document.createElement('span');
+          txt.textContent = st;
+          row.appendChild(cb);
+          row.appendChild(txt);
+          refs.closureStagePanelEl.appendChild(row);
+        });
+        refs.closureStageSummaryEl.textContent = stageLabelText(
+          scorecardClosureStageFilter,
+          stageOptions.length
+        );
+      }
+
+      const stageFilterSet = scorecardClosureStageFilter;
+      const helpFilter = scorecardClosureHelpFilter || 'all';
+      const passHelp = (rec) => {
+        if (helpFilter === 'all') return true;
+        const yes = isHelpNeeded(rec);
+        return helpFilter === 'yes' ? yes : !yes;
+      };
+      const passStage = (rec) => {
+        if (!stageFilterSet || stageFilterSet.size === 0) return true;
+        const st = String(rec.stage || '').trim() || '(blank)';
+        return stageFilterSet.has(st);
+      };
+
+      const filterRows = (arr) => arr.filter((rec) => passStage(rec) && passHelp(rec));
+      const filteredThis = filterRows(thisDeals);
+      const filteredNext = filterRows(nextDeals);
+      const filteredThisRev = filteredThis.reduce((acc, rec) => acc + dealSizeValue(bestDealSize(rec)), 0);
+      const filteredNextRev = filteredNext.reduce((acc, rec) => acc + dealSizeValue(bestDealSize(rec)), 0);
+
       const tThis = getQuarterTarget(seller, activeQuarterLabels.current);
       const tNext = getQuarterTarget(seller, activeQuarterLabels.next);
-      refs.thisQuarterMeta.textContent = `${money.format(thisDeals.length)} deals | ${fmtDealSize(thisRev)} (T ${fmtDealSize(tThis.revenue)} | ${pctText(thisRev, tThis.revenue)})`;
-      refs.nextQuarterMeta.textContent = `${money.format(nextDeals.length)} deals | ${fmtDealSize(nextRev)} (T ${fmtDealSize(tNext.revenue)} | ${pctText(nextRev, tNext.revenue)})`;
-      renderLikelihoodDealLines(refs.thisQuarterLines, thisDeals, { alertDealSet: helpSet });
-      renderLikelihoodDealLines(refs.nextQuarterLines, nextDeals, { alertDealSet: helpSet });
+      refs.thisQuarterMeta.textContent = `${money.format(filteredThis.length)} deals | ${fmtDealSize(filteredThisRev)} (T ${fmtDealSize(tThis.revenue)} | ${pctText(filteredThisRev, tThis.revenue)})`;
+      refs.nextQuarterMeta.textContent = `${money.format(filteredNext.length)} deals | ${fmtDealSize(filteredNextRev)} (T ${fmtDealSize(tNext.revenue)} | ${pctText(filteredNextRev, tNext.revenue)})`;
+      renderLikelihoodDealLines(refs.thisQuarterLines, filteredThis, { alertDealSet: helpSet });
+      renderLikelihoodDealLines(refs.nextQuarterLines, filteredNext, { alertDealSet: helpSet });
     }
 
     function loadAuthStore() {
@@ -5320,6 +5456,18 @@
       return `${(Number(x || 0) * 100).toFixed(1)}%`;
     }
 
+    function stageSortKey(stageLabel) {
+      const n = stageNumber(stageLabel);
+      if (n == null) return 9999;
+      return n;
+    }
+
+    function stageLabelText(selectedSet, totalCount) {
+      if (!selectedSet || selectedSet.size === 0) return `Stages: All (${money.format(totalCount)})`;
+      if (selectedSet.size === totalCount) return `Stages: All (${money.format(totalCount)})`;
+      return `Stages: ${money.format(selectedSet.size)} of ${money.format(totalCount)}`;
+    }
+
     function closeKpiPopup() {
       activePopupSeller = null;
       const popup = document.getElementById('kpi-popup');
@@ -5555,6 +5703,47 @@
         const likelihoodGrid = document.createElement('div');
         likelihoodGrid.className = 'likelihood-grid';
 
+        const closureFilterBar = document.createElement('div');
+        closureFilterBar.className = 'closure-filters';
+
+        // Stage multi-select (checkbox dropdown).
+        const stageMs = document.createElement('details');
+        stageMs.className = 'ms';
+        const stageSummary = document.createElement('summary');
+        stageSummary.textContent = 'Stages: All';
+        stageMs.appendChild(stageSummary);
+        const stagePanel = document.createElement('div');
+        stagePanel.className = 'ms-panel';
+        stageMs.appendChild(stagePanel);
+        closureFilterBar.appendChild(stageMs);
+
+        // Help Needed filter (All / Yes / No).
+        const helpBox = document.createElement('div');
+        helpBox.className = 'closure-help-filter';
+        const helpLab = document.createElement('label');
+        helpLab.textContent = 'Help Needed';
+        const helpSel = document.createElement('select');
+        [
+          ['all', 'All'],
+          ['yes', 'Yes'],
+          ['no', 'No'],
+        ].forEach(([v, t]) => {
+          const opt = document.createElement('option');
+          opt.value = v;
+          opt.textContent = t;
+          helpSel.appendChild(opt);
+        });
+        helpSel.value = scorecardClosureHelpFilter || 'all';
+        helpSel.addEventListener('change', () => {
+          scorecardClosureHelpFilter = helpSel.value || 'all';
+          updateLikelihoodSummaryForSeller(seller);
+        });
+        helpBox.appendChild(helpLab);
+        helpBox.appendChild(helpSel);
+        closureFilterBar.appendChild(helpBox);
+
+        card.appendChild(closureFilterBar);
+
         function makeLikelihoodCard(title) {
           const shell = document.createElement('div');
           shell.className = 'likelihood-table-card';
@@ -5598,6 +5787,8 @@
           nextQuarterMeta: nextCard.meta,
           thisQuarterLines: thisCard.lines,
           nextQuarterLines: nextCard.lines,
+          closureStageSummaryEl: stageSummary,
+          closureStagePanelEl: stagePanel,
         };
 
         wrap.appendChild(card);
